:zap: Use unmodifiable view instead of a copy to get pending cookies